[package]
name = "minidow"
version = "0.1.0"
authors = ["Simon THOBY <git@nightmared.fr>"]
edition = "2018"

[dependencies]
nix = { version = "0.20", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = ["handle-sigsegv", "tester"]
std = []
tester = ["std"]
handle-sigsegv = ["nix", "libc", "std"]

[lib]
name = "minidow"
path = "src/lib.rs"

[[bin]]
name = "minidow"
path = "src/main.rs"

[profile.release]
lto = true
overflow-checks = false
#debug = true
